--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "*/12 * * * *"
+      "expression": "*/12 * * * *"
     }
   ]
 }
